fix alignment

--- a/res/css/views/rooms/_RoomCallBanner.pcss
+++ b/res/css/views/rooms/_RoomCallBanner.pcss
@@ -16,6 +16,7 @@ limitations under the License.
 
 .mx_RoomCallBanner {
     .mx_RoomCallBanner_text {
+        display: flex;
         flex: 1;
         align-items: center;
     }
